Add multi-provider AI config support